# gemini-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  premium_notes.md  release_body.md  test_enigo.rs  test_hwnd.rs  updater.json  updater.key  updater.key.pub  vite.config.js
scripts/: post-build.ps1
src/: App.svelte  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bin.rs  config.rs  lib.rs  process.rs  state.rs  tray.rs  updater.rs
src-tauri/src/ipc/: mod.rs  settings.rs  system.rs  window.rs
src-tauri/src/scripts/: find_input.js  webview_back.js  webview_focus.js  webview_inject.js  webview_snip.js
src/components/: SettingsModal.svelte  Titlebar.svelte  WebviewContainer.svelte
src/components/icons/: BackIcon.svelte  MaximizeIcon.svelte  MinimizeIcon.svelte  PinIcon.svelte  RefreshIcon.svelte  SettingsIcon.svelte
src/components/settings/: HotkeySetting.svelte  SettingGroup.svelte  SettingRow.svelte  ToggleSetting.svelte  UpdaterBar.svelte  WindowSizeSetting.svelte
src/services/: settingsService.ts  updaterService.ts  windowService.ts
src/utils/: layout.ts
