[package]
name = "gemini-desktop"
version = "2.0.0"
description = "Gemini Desktop App"
authors = ["Omux25"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gemini_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.39.5"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi", "winnt", "minwindef", "winuser"] }
lazy_static = "1.5.0"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["time"] }
tauri-plugin-store = "~2"
enigo = "0.2"
tauri-plugin-clipboard-manager = "2"
arboard = "3"
image = "0.25.1"
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

